--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -38,6 +38,11 @@ html {
     box-sizing: border-box;
 }
 
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 a {
     text-decoration: none;
 }
