--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -57,6 +57,7 @@
         margin: 2.4rem 1.6rem 2.2rem 1.6rem;
         transition: 0.3s ease-in-out;
         cursor: pointer;
+        font-size: map.get(v.$font-sizes, "body-sm");
 
         &:hover {
             background-color: v.$bg-secondary;
